rework nginx config to run as non root and add helm chart

--- a/content/404.html
+++ b/content/404.html
@@ -56,8 +56,8 @@
 <body>
     <article>
         <h1> </h1>
-        <h1>Not Found</h1>
-        <p>The content you're looking for could not be found</p>
+        <h1>Oops: <!--# echo var="status" default="" --></h1>
+        <p><!--# echo var="status_text" default="The content you're looking for could not be found" --></p>
     </article>
 </body>
 
