Fix style issues

--- a/www/error.html
+++ b/www/error.html
@@ -14,7 +14,6 @@
             color: #FFF;
             min-height: 100vh;
             margin: 0 auto;
-            padding: 20px;
         }
 
         h1 {
@@ -68,7 +67,7 @@
             -ms-flex-item-align: center !important;
             align-self: center !important;
             text-align: center;
-            margin-top: 20px;
+            padding-top: 20px;
         }
         .progress_bar {
             height: 5px;
